Added to CSS transitions
Added more tests to transitions

--- a/Amys-Sandbox/CSS3-Transforms/css3-transforms.html
+++ b/Amys-Sandbox/CSS3-Transforms/css3-transforms.html
@@ -29,5 +29,30 @@
         	</form>
 		</section>
 		
+		<section class="Amy">
+			<h3> Amy's test </h3>
+			<div id="hovering">
+				<p class="hover">Hover over this box! Cool, right?</p>
+			</div>
+			<br>
+		</section>
+		
+		<section class="Amy">
+			<h3> Click and hold the button </h3>
+			<button id="jump" type="button" value="click">Click me!</button>
+		</section>
+		
+		<section class="Amy">
+			<h3> Selector Transition </h3>
+			<form action="">
+				<input id="red" type="radio" checked="checked" value="Red" name="color">Red<br>
+				<input id="blue" type="radio" value="Blue" name="color">Blue<br>
+				<!-- Note: this div must be in the form for the CSS selector to find it -->
+				<div id="radio">
+					<p>Select one of the options above</p>
+				</div>
+			</form>
+			
+		</section>
     </body>
 </html>
