--- a/Group-Sandboxes/local-storage.html
+++ b/Group-Sandboxes/local-storage.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Input Animation</title>
+        <meta name="author" content="Brendan Skousen">
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
