Added animation and combination example

--- a/Amys-Sandbox/CSS3-Animations/css-animations-example.html
+++ b/Amys-Sandbox/CSS3-Animations/css-animations-example.html
@@ -10,36 +10,44 @@
 	</head>
 	<body>
 		<h1> CSS Animations </h1>
+		<div id="content">
+			<section id="slide">
+				<h2> Sliding image </h2>
+				<img src="smiles.png" alt="Sliding Smiley Face">
+			</section>
 
-		<section id="slide">
-			<h2> Sliding image </h2>
-			<img src="smiles.png" alt="Sliding Smiley Face">
-		</section>
+			<section id="rotate">
+				<h2> Rotating image </h2>
+				<img src="smiles.png" alt="Rotating Smiley Face">
+			</section>
 
-		<section id="rotate">
-			<h2> Rotating image </h2>
-			<img src="smiles.png" alt="Rotating Smiley Face">
-		</section>
+			<section id="bounce">
+				<h2> Bouncing image </h2>
+				<div id="arc">
+					<img src="smiles.png" alt="Bouncing Smiley Face">
+				</div>
+			</section>
 
-		<section id="bounce">
-			<h2> Bouncing image </h2>
-			<div id="arc">
-				<img src="smiles.png" alt="Bouncing Smiley Face">
-			</div>
-		</section>
+			<section id="changing">
+				<h2> Changing images </h2>
+				<div id="change">
+					<img id="smiles" src="smiles.png"/>
+					<img id="batman" src="batman.png"/>
+				</div>
+			</section>
 
-		<section id="changing">
-			<h2> Changing images </h2>
-			<div id="change">
-				<img id="smiles" src="smiles.png"/>
-				<img id="batman" src="batman.png"/>
-			</div>
-		</section>
+			<section id="colors">
+				<h2> Background color changes </h2>
+				<div> Don't get mezmerized </div>
+			</section>
 
-		<section id="colors">
-			<h2> Background color changes </h2>
-			<div> Don't get mezmerized </div>
-		</section>
+			<section id="roll">
+				<h2> Rolling image </h2>
+				<img src="smiles.png" alt="Rolling Smiley Face">
+			</section>
 
+
+
+		</div>
 	</body>
 </html>
