Added JQuery Example

--- a/Amys-Sandbox/Combination/who-are-you.html
+++ b/Amys-Sandbox/Combination/who-are-you.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> AJAX JSON example </title>
+		<title> Combination example </title>
 		<meta name="Author" content="Amy Norman">
 
 		<link rel="stylesheet" href="who-are-you.css"/>
