--- a/Amys-Sandbox/AJAX/ajax-basic-example.html
+++ b/Amys-Sandbox/AJAX/ajax-basic-example.html
@@ -33,6 +33,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; AJAX - Basic
+			</nav>
+		</header>
 		<h1> AJAX Basic Test (GET Request) </h1>
 		<div id="myDiv"><h2>Let AJAX change this text</h2></div>
 		<button type="button" onclick="loadXMLDoc()">Change Content</button>
