--- a/Amys-Sandbox/AJAX/ajax-json-example.html
+++ b/Amys-Sandbox/AJAX/ajax-json-example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> AJAX JSON example </title>
+		<title> AJAX JSON and Local Storage example </title>
 		<meta name="Author" content="Amy Norman">
 		<script type="text/javascript">
 			// Note: AJAX examples only work from the browser. There is a link to a working example in the body below.
@@ -85,6 +85,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; AJAX JSON and Local Storage Example
+			</nav>
+		</header>
 		<h1> AJAX JSON and Local Storage Test </h1>
 		<div id="myDiv"><h2>Click the button to load the JSON object from local storage</h2></div>
 		<button type="button" id="button" onclick="loadCar()">Load Car</button>
