--- a/Amys-Sandbox/CSS3-Animations/css-animations-example.html
+++ b/Amys-Sandbox/CSS3-Animations/css-animations-example.html
@@ -9,6 +9,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; CSS3 Animations
+			</nav>
+		</header>
 		<h1> CSS Animations </h1>
 		<div id="content">
 			<section id="slide">
