--- a/Amys-Sandbox/Combination/who-are-you.html
+++ b/Amys-Sandbox/Combination/who-are-you.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Combination example </title>
+		<title> Mood Tracker App </title>
 		<meta name="Author" content="Amy Norman">
 
 		<link rel="stylesheet" href="who-are-you.css"/>
@@ -148,6 +148,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; Mood Tracker App
+			</nav>
+		</header>
 		<h1> Welcome </h1>
 		<div id="myDiv">
 			<h2>What is your name?</h2>
