--- a/Amys-Sandbox/JavaScript-Objects/js-object-serialization-example.html
+++ b/Amys-Sandbox/JavaScript-Objects/js-object-serialization-example.html
@@ -34,6 +34,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; JSON Serialization
+			</nav>
+		</header>
 		<h1> JavaScript Object Serialization Example </h1>
 
 		<h2> Create a Person: </h2>
