--- a/Amys-Sandbox/JavaScript-Objects/js-object-example.html
+++ b/Amys-Sandbox/JavaScript-Objects/js-object-example.html
@@ -26,6 +26,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; Object Example 1
+			</nav>
+		</header>
 		<h1> JavaScript Object Example 1 </h1>
 		<h2> Create a Toy: </h2>
 		<p id="Display Toy"></p>
