--- a/Amys-Sandbox/JavaScript-Objects/js-object-inheritance-example.html
+++ b/Amys-Sandbox/JavaScript-Objects/js-object-inheritance-example.html
@@ -25,6 +25,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; Object Inheritance Example
+			</nav>
+		</header>
 		<h1> JavaScript Object Inheritance Example </h1>
 
 		<h2> Create a Person: </h2>
