--- a/Amys-Sandbox/jQuery/jQuery-example.html
+++ b/Amys-Sandbox/jQuery/jQuery-example.html
@@ -78,6 +78,11 @@
 		</script>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; AJAX using jQuery
+			</nav>
+		</header>
 		<h1> JQuery Examples </h1>
 
 		<section>
