Added CSS Transition 2

--- a/Amys-Sandbox/CSS-Transitions/CSS-Transitions.html
+++ b/Amys-Sandbox/CSS-Transitions/CSS-Transitions.html
@@ -1,14 +1,122 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Title </title>
+		<title> CSS Transtitions 2 </title>
 		<meta name="Author" content="Amy Norman">
+		<link rel="stylesheet" href="css-transitions.css"/>
 		<script type="text/javascript">
 
 		</script>
 	</head>
 	<body>
-		<h1> Title </h1>
+		<header>
+			<nav>
+				<a href="http://norman-amy.github.io/" title="Home Page">Home</a> &gt; CSS Transitions 2
+			</nav>
+		</header>
+		<h1> CSS Transitions, Continued </h1>
+		<p> At the beginning of the semester, I played with a few simple transitions that can be found <a href="http://norman-amy.github.io/Amys-Sandbox/CSS3-Transforms/css3-transforms.html" title="CSS Transitions 1">here</a>. Now I'm going back and creating more examples to get more practice with them! There are different trainsition properties, so I've got examples to help show them better. Check them out!
+		</p>
+<!-- 		<h2> Transitions </h2>
+		<section class="row1 col1">
+			<h3> Background Color </h3>
+			<div id="bgcolor"/>
+		</section>
 
+		<section class="row1 col2">
+			<h3> Padding Color </h3>
+			<div id="pdingcolor"/>
+		</section>
+
+		<section class="row1 col3">
+			<h3> Clicking Colors </h3>
+			<div id="colorClick"/>
+		</section> -->
+
+		<h2> Transition Property </h2>
+		<p>For a full list of properties that can be animated. Go <a href="http://www.w3.org/TR/css3-transitions/#animatable-properties" title="W3 Animate Property List">here</a>.
+		</p>
+		<section class="row2 col1">
+			<h3> Opacity </h3>
+			<div id="opac"></div>
+		</section>
+
+		<section class="row2 col2">
+			<h3> Left </h3>
+			<div id="left"></div>
+		</section>
+
+		<section class="row2 col3">
+			<h3> Font-Size </h3>
+			<div id="f-size"> 
+				<p>Watch this font grow!</p>
+			</div>
+		</section>
+
+		<h2> Transition Timing Function </h2>
+		<section class="row3 col1">
+			<h3> Ease </h3>
+			<div id="ease"></div>
+		</section>
+
+		<section class="row3 col2">
+			<h3> Linear </h3>
+			<div id="linear"></div>
+		</section>
+
+		<section class="row3 col3">
+			<h3> Ease-In </h3>
+			<div id="e-in"></div>
+		</section>
+
+		<section class="row4 col1">
+			<h3> Ease-Out </h3>
+			<div id="e-out"></div>
+		</section>
+
+		<section class="row4 col2">
+			<h3> Ease-In-Out </h3>
+			<div id="e-in-out"></div>
+		</section>
+
+		<section class="row4 col3">
+			<h3> Step-Start and Step-End </h3>
+			<p>Note: Step-start on the left starts immediately. Step-end on the right starts after 1 second (end of interval).
+			</p>
+			<div id="step-start"></div>
+			<div id="step-end"></div>
+		</section>
+
+		<h2> Transition Duration </h2>
+		<section class="row5 col1">
+			<h3> Default - 0 seconds </h3>
+			<div id="zeroSecDur"></div>
+		</section>
+
+		<section class="row5 col2">
+			<h3> 1 second </h3>
+			<div id="oneSecDur"></div>
+		</section>
+
+		<section class="row5 col3">
+			<h3> 3 seconds </h3>
+			<div id="threeSecDur"></div>
+		</section>
+
+		<h2> Transition Delay </h2>
+		<section class="row6 col1">
+			<h3> Default - 0 seconds </h3>
+			<div id="zeroSecDelay"></div>
+		</section>
+
+		<section class="row6 col2">
+			<h3> 5 seconds </h3>
+			<div id="fiveSecDelay"></div>
+		</section>
+
+		<section class="row6 col3">
+			<h3> -1 second with duration </h3>
+			<div id="negOneSecDelay"></div>
+		</section>
 	</body>
 </html>
